# openapi.yaml
@@ -34,6 +34,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetPicturesResponse'
+        '400':
+          description: Bad Request
       description: List all pictures
       parameters:
         - schema:
@@ -60,6 +62,35 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/PostPicturesRequest'
+  '/pictures/{id}':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+    delete:
+      summary: PutPicture
+      operationId: delete-pictures-id
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+    put:
+      summary: PutPicture
+      operationId: put-pictures-id
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PutPictureRequest'
+        description: ''
 components:
   schemas:
     GetTagsResponse:
@@ -116,3 +147,23 @@ components:
         fileName:
           type: string
           description: fileName
+        id:
+          type: string
+          description: ID
+    PutPictureRequest:
+      title: PutPictureRequest
+      type: object
+      properties:
+        id:
+          type: string
+          description: ID
+        tags:
+          type: array
+          description: List of tags
+          minItems: 1
+          items:
+            type: string
+      required:
+        - id
+        - tags
+  responses: {}
